frontend/ingress.yaml
# frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: jm
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: jm.frontend.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
